WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282128
REGRESSION(
285688@main
?): [ macOS iOS wk2 ] 15x imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/* are near constant failures.
https://bugs.webkit.org/show_bug.cgi?id=282128
Summary
REGRESSION(285688@main?): [ macOS iOS wk2 ] 15x imported/w3c/web-platform-tes...
Anfernee Viduya
Reported
2024-10-25 21:13:37 PDT
imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/fetch.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/img-tag.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/sharedworker-classic.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/sharedworker-module.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/worklet-audio-import-data.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/worklet-audio.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/fetch.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/img-tag.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/sharedworker-classic.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/sharedworker-module.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/worklet-audio-import-data.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/worklet-audio.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/xhr.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/worker-classic-data.meta/unset/fetch.https.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/worker-module-data.meta/unset/fetch.https.html are near constant failures. HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Ffetch.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Fimg-tag.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Fsharedworker-classic.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Fsharedworker-module.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Fworklet-audio-import-data.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fsrcdoc-inherit.meta%2Funset%2Fworklet-audio.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Ffetch.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fimg-tag.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fsharedworker-classic.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fsharedworker-module.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fworklet-audio-import-data.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fworklet-audio.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fxhr.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fworker-classic-data.meta%2Funset%2Ffetch.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fupgrade-insecure-requests%2Fgen%2Fworker-module-data.meta%2Funset%2Ffetch.https.html
DIFF: PASS Upgrade-Insecure-Requests: Expects blocked for fetch to cross-http-downgrade origin and downgrade redirection from https context. PASS Upgrade-Insecure-Requests: Expects blocked for fetch to cross-http-downgrade origin and no-redirect redirection from https context. PASS Upgrade-Insecure-Requests: Expects blocked for fetch to cross-https origin and downgrade redirection from https context. -PASS Upgrade-Insecure-Requests: Expects blocked for fetch to same-http-downgrade origin and downgrade redirection from https context. -PASS Upgrade-Insecure-Requests: Expects blocked for fetch to same-http-downgrade origin and no-redirect redirection from https context. -PASS Upgrade-Insecure-Requests: Expects blocked for fetch to same-https origin and downgrade redirection from https context. +FAIL Upgrade-Insecure-Requests: Expects blocked for fetch to same-http-downgrade origin and downgrade redirection from https context. assert_equals: The resource request should be 'blocked'. expected "blocked" but got "allowed" +FAIL Upgrade-Insecure-Requests: Expects blocked for fetch to same-http-downgrade origin and no-redirect redirection from https context. assert_equals: The resource request should be 'blocked'. expected "blocked" but got "allowed" +FAIL Upgrade-Insecure-Requests: Expects blocked for fetch to same-https origin and downgrade redirection from https context. assert_equals: The resource request should be 'blocked'. expected "blocked" but got "allowed" DIFF LINK:
https://build.webkit.org/results/Apple-Sequoia-Release-WK2-Tests/285722%40main%20(430)/imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/fetch.https-diff.txt
DESCRIPTION: After
285688@main
landed is when the failures started to occur. Trying to reproduce now. Will update bug.
Attachments
test list
(5.26 KB, text/plain)
2024-10-26 23:30 PDT
,
Anfernee Viduya
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-25 21:13:48 PDT
<
rdar://problem/138680837
>
EWS
Comment 2
2024-10-26 11:16:37 PDT
Test gardening commit
285728@main
(65279bca05e2): <
https://commits.webkit.org/285728@main
> Reviewed commits have been landed. Closing PR #35754 and removing active labels.
Anfernee Viduya
Comment 3
2024-10-26 23:30:17 PDT
Created
attachment 473056
[details]
test list REPRODUCIBILITY: I was able to reproduce the failure on ToT using command. run-webkit-test --test-list test_list.txt --iterations=5 --force It seems that a test leak is causing these test to fail, but on being tested on their own, the test passes.
Alex Christensen
Comment 4
2024-12-19 16:01:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38234
EWS
Comment 5
2024-12-19 22:06:39 PST
Committed
288147@main
(35d63141717f): <
https://commits.webkit.org/288147@main
> Reviewed commits have been landed. Closing PR #38234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug