REGRESSION(285688@main?): [ macOS iOS wk2 ] 15x imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/* are near constant failures. https://bugs.webkit.org/show_bug.cgi?id=282128 rdar://138680837

Reviewed by Charlie Wolfe.

285688@main removed a call to Frame::disownOpener and replaced it by another
call to Frame::disownOpener that happens between the tests, but the one we removed
happened after about:blank is loaded and the one we added happens before.
This is fine most of the time, but Frame::disownOpener also calls
LocalFrame::reinitializeDocumentSecurityContext which needs to happen after we
load about:blank between the tests.  This was evident in security context state
being left behind between tests.  If you ran this test:

imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/sharedworker-module-data.http-rp/upgrade/fetch.https.html

immediately followed by this test:

imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/srcdoc-inherit.meta/unset/fetch.https.html

the state left behind would cause the second test to fail.  Moving the call to
WKPageResetStateBetweenTests a few lines later after we have loaded about:blank
fixes this and makes the second test no longer fail from state left behind.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/288147@main